src/rt/viewarea.c
	terminology and output format [deprecated 7.12]

pre 7.0
-------
include/raytrace.h
	struct hit.hit_point -> RT_HIT_POINT [deprecated pre-7.0]
	struct hit.hit_normal -> RT_HIT_NORMAL [deprecated pre-7.0]


************
* OBSOLETE *
************

Below are the interfaces that have followed deprecation policy and are
now no longer a part of BRL-CAD.

7.26.0
------
libbu, libbn
        no longer utilize or require Tcl [7.26 architecture change]
include/dg.h
        implementation detail no longer being exposed, use libged [deprecated 7.22]
autogen.sh && configure
	GNU Autotools build system -> CMake build system [deprecated 7.20]
Dunn camera and Canon printer tools
	dunncolor [ deprecated 7.16 ]
	dunnsnap [ deprecated 7.16 ]
	canonize [ deprecated 7.16 ]
genptr_t/GENPTR_NULL
	genptr_t -> void* [deprecated 7.16]
include/bu.h
	bu_argv0() -> bu_basename(bu_argv0_full_path()); [deprecated 7.16]
include/dm_color.h
	dm_color.h -> dm.h [deprecated 7.14]
include/fb.h
	FB_WPIXEL -> fb_wpixel [deprecated 7.14]
include/raytrace.h
	rt_fdiff -> NEAR_ZERO [deprecated 7.14]
	rt_reldiff -> NEAR_ZERO [deprecated 7.14]
	DIR_* -> RT_DIR_* [deprecated 7.14]
	RT_HIT_NORM -> RT_HIT_NORMAL [deprecated 7.12]
include/vmath.h
	VADD2_2D -> V2ADD2 [deprecated 7.14]
	VSUB2_2D -> V2SUB2 [deprecated 7.14]
	MAGSQ_2D -> MAG2SQ [deprecated 7.14]
	VDOT_2D -> V2DOT [deprecated 7.14]
	VMOVE_2D -> V2MOVE [deprecated 7.14]
	VSCALE_2D -> V2SCALE [deprecated 7.14]
	VJOIN1_2D -> V2JOIN1 [deprecated 7.14]
liborle
include/orle.h
	remove liborle and the tools using it, fb-orle, orle-fb, orle-pix and
	pix-orle [deprecated 7.20]
mged
	make_bb -> bb [deprecated 7.16]
	tops -g -u -> now default behavior [deprecated 7.14]
	-n option -> -c option [deprecated 7.14]
	per_line [deprecated 7.14]
SGI-specific tools
	pl-sgi -> pl-fb [ deprecated 7.16 ]
src/gtools
	g_[toolname] -> g[toolname] [deprecated 7.14]
src/librt/cmd.c
	rt_split_cmd() -> bu_argv_from_string() [deprecated 7.12]
any-png.sh